# content-creator-agent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  deploy.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
config/: brand_voice.yaml  daily_schedule.yaml  platforms.yaml  skills.yaml  sources.yaml
migrations/: env.py
migrations/versions/: 0001_knowledge_rag.py
src/agent/: __init__.py  main.py
src/agent/core/: __init__.py  config.py  database.py  logging.py  models.py  schemas.py
src/agent/generators/: __init__.py
src/agent/publishers/: __init__.py
src/agent/rag/: __init__.py  chunker.py  embedder.py  ingester.py  retriever.py
src/agent/research/: __init__.py
src/agent/skills/: base.py  daily_review.py  registry.py  trend_scan.py  write_post.py
src/agent/slack_bot/: __init__.py
src/agent/sources/: normalizer.py  protocol.py  rag_source.py  web_search.py
src/agent/tasks/: analytics.py  celery_app.py  daily_skills.py  publish.py  research.py
tests/: conftest.py  test_health.py
tests/test_rag/: test_chunker.py  test_embedder.py  test_ingester.py  test_retriever.py
tests/test_skills/: test_daily_review.py
tests/test_tasks/: test_daily_skills.py
